--- a/resources/views/content/register.twig
+++ b/resources/views/content/register.twig
@@ -10,35 +10,70 @@
     <script src="{{ plugin_path('BlueBerry') }}/js/blue-berry.js?v={{ 'now'|date('U') }}"></script>
 {% endblock %}
 
-
 {% block PageBody %}
-    {{ component( "Ceres::Customer.Components.Registration") }}
-    <div class="registration container-max mt-3">
-        <div class="row mb-5">
-            <div class="col-sm-10 offset-sm-1 col-md-6 offset-md-3">
-                <h1>
-                    {{ trans("Ceres::Template.regRegisterAccount") }}
 
-                     <popper v-cloak class="float-right">
-                        <button slot="handle" class="btn btn-icon btn-secondary btn-sm">
-                            <i class="fa fa-info"></i>
-                        </button>
-                        <div slot="title">
-                            {{ trans("Ceres::Template.regContactInformations") }}
-                        </div>
-                        <ul slot="content" class='pl-3'>
-                            <li class='mb-3'>{{ trans('Ceres::Template.regContactInfoText1') }}</li>
-                            <li class='mb-3'>{{ trans('Ceres::Template.regContactInfoText2') }}</li>
-                            <li class='mb-3'>{{ trans('Ceres::Template.regContactInfoText3') }}</li>
-                            <li>{{ trans('Ceres::Template.regContactInfoText4') }}</li>
-                        </ul>
-                    </popper>
-                </h1>
+<script type="x/template" id="vue-registration">
+    <div>
+        <div class="modal-body">
+            <div class="row" :id="'registration' + _uid">
+                <div class="col-sm-12">
+                    <div class="input-unit" data-validate="mail">
+                        {% set uid_mail = uid() %}
+                        <input type="text" name="email" id="{{ uid_mail }}" v-model="username" data-autofocus>
+                        <label for="{{ uid_mail }}">{{ trans("Ceres::Template.regEmail") }}*</label>
+                    </div>
+                </div>
 
-                <div class="row">
-                    <registration template="#vue-registration" backlink="{{ request.get("backlink") | url_encode }}"></registration>
+                <div class="col-sm-6" v-if="!guestMode">
+                    <div class="input-unit" :class="{'no-bottom media-xs-d': modalElement}" data-validate="password" ref="passwordInput">
+                        <popper v-cloak trigger="focus" placement="left" ref="passwordHint">
+                            {% set uid_pwd = uid() %}
+                            <input slot="handle" type="password" name="password" id="{{ uid_pwd }}" v-model="password">
+                            <div slot="title">
+                                {{ trans("Ceres::Template.regPasswordHintTitle") }}
+                            </div>
+                            <ul slot="content" class="pl-3">
+                                <li>{{ trans("Ceres::Template.regPasswordHintLength") }}</li>
+                                <li>{{ trans("Ceres::Template.regPasswordHintDigit") }}</li>
+                                <li>{{ trans("Ceres::Template.regPasswordHintChar") }}</li>
+                            </ul>
+                        </popper>
+
+                        <label for="{{ uid_pwd }}">{{ trans("Ceres::Template.regPassword") }}*</label>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 input-unit-group" v-if="!guestMode">
+                    <div class="input-unit" :class="{'no-bottom': modalElement}" data-validate="ref">
+                        {% set uid_pwd_repeat = uid() %}
+                        <input type="password" name="password-repeat" id="{{ uid_pwd_repeat }}" v-model="passwordRepeat" data-validate-ref="#{{ uid_pwd }}">
+                        <label for="{{ uid_pwd_repeat }}">{{ trans("Ceres::Template.regRepeatPassword") }}*</label>
+                    </div>
+                </div>
+
+                <div class="col-12">
+                    <address-input-group
+                        template="#vue-address-input-group"
+                        v-if="!isSimpleRegistration"
+                        address-type="1"
+                        :value="billingAddress"
+                        @input="setAddressDataField($event)">
+                    </address-input-group>
                 </div>
             </div>
         </div>
+        <div class="modal-footer">
+            {{ LayoutContainer.show("Ceres::RegistrationOverlay.ExtendOverlayButtons") }}
+
+            <button @click="validateRegistration" :disabled="isDisabled" class="btn btn-primary btn-medium btn-right">
+                <i class="fa fa-user-plus" v-waiting-animation="isDisabled" aria-hidden="true"></i>
+                {{ trans("Ceres::Template.regRegister") }}
+            </button>
+        </div>
     </div>
+</script>
+
+<div class="row">
+    <registration template="#vue-registration" backlink="{{ request.get("backlink") | url_encode }}"></registration>
+</div>
 {% endblock %}
