--- a/resources/css/blue-berry.css
+++ b/resources/css/blue-berry.css
@@ -7,10 +7,15 @@ html, body {
     border: 0px;
 }
 
-.btn-primary, .widget-address.widget-primary .btn-primary, a {
+.btn-primary, .widget-address.widget-primary .btn-primary,
+.btn-primary:hover, .widget-address.widget-primary .btn-primary:hover {
     color: #fff;
     background-color: #132479;
     border-color: #132479;
+}
+
+a, a:hover {
+    color: #132479;
 }
 
 .blue-berry-login-body {
