--- a/resources/css/blue-berry.css
+++ b/resources/css/blue-berry.css
@@ -51,7 +51,7 @@ body>#vue-app, body>#vue-error {
 
 #page-body {
     position: fixed;
-    width: 450px;
+    width: 350px;
     height: auto;
     margin-bottom: 0px;
     text-align: right;
@@ -59,6 +59,14 @@ body>#vue-app, body>#vue-error {
     right: 5%;
     top: 50%;
     transform: translate(0%,-50%);
+}
+
+.login #page-body {
+    margin-top: 50px;
+}
+
+.register #page-body {
+    width: 350px;
 }
 
 .bb-main-disclaimer {
