--- a/resources/css/blue-berry.css
+++ b/resources/css/blue-berry.css
@@ -123,19 +123,18 @@ body>#vue-app, body>#vue-error {
         position: relative;
         left: inherit;
         top: inherit;
-        margin-top: 0px;
+        margin-top: 100px;
         transform: none!important;
+        width: 100%;
     }
 
     .login #page-body {
-        margin-top: 60%;
         margin-bottom: 50px;
     }
 
     .register #page-body {
-        margin-top: 15%;
         margin-bottom: 90px;
-        padding: 10px 20px 10px 20px;
+        margin: 10px 20px 10px 20px;
     }
 
     .blue-berry-login-body {
