--- a/resources/css/blue-berry.css
+++ b/resources/css/blue-berry.css
@@ -57,12 +57,8 @@ body>#vue-app, body>#vue-error {
     text-align: right;
     background-color: rgba(255, 255, 255, 0.7);
     right: 5%;
-    top: 50%;
-    transform: translate(0%,-50%);
-}
-
-.login #page-body {
-    margin-top: 50px;
+    bottom: 10%;
+    /* transform: translate(0%,-50%); */
 }
 
 .register #page-body {
@@ -88,7 +84,7 @@ body>#vue-app, body>#vue-error {
 
 .bb-login-holder {
     padding: 15px;
-    text-align: right;
+    text-align: left;
     border-top: 1px solid #cccccc;
     border-bottom: 1px solid #cccccc;
 }
