--- a/resources/views/PageDesign/TopHeader.twig
+++ b/resources/views/PageDesign/TopHeader.twig
@@ -5,7 +5,7 @@
 {% set currencyFormat = config("Ceres.currency.format") %}
 {% set currencyFormatSelect = config("Ceres.currency.format_selection") %}
 
-<header id="page-header" class="top-bar fixed-top">
+<header id="page-header" class="top-bar fixed-top ccccc">
     <div>
         <div class="container-max">
             <div class="row">
