--- a/resources/views/ItemList/Components/CategoryItem.twig
+++ b/resources/views/ItemList/Components/CategoryItem.twig
@@ -1,95 +1,107 @@
-{{ component( "Ceres::Basket.Components.AddToBasket" ) }}
-{{ component( "Ceres::ItemList.Components.CategoryImageCarousel") }}
-{{ component( "Ceres::ItemList.Components.ItemStoreSpecial" ) }}
+<script type="x/template" data-component="category-item">
+    <article class="cmp cmp-product-thumb">
+        <div :class="paddingClasses" :style="paddingInlineStyles">
 
-{% import "Ceres::Basket.Macros.AddToBasket" as AddToBasket %}
+            <add-to-basket
+                    :variation-id="item.variation.id"
+                    :is-salable="!!item.filter && item.filter.isSalable"
+                    :has-children="!!item.item && item.item.salableVariationCount > 1"
+                    :interval-quantity="item.variation.intervalOrderQuantity || 1"
+                    :minimum-quantity="item.variation.minimumOrderQuantity"
+                    :maximum-quantity="!!item.variation.maximumOrderQuantity && item.variation.maximumOrderQuantity > 0 ? item.variation.maximumOrderQuantity : null"
+                    :order-properties="item.properties.filter(function(prop) { return prop.property.isOderProperty })"
+                    :has-order-properties="item.hasOrderProperties"
+                    :use-large-scale="true"
+                    :show-quantity="false"
+                    :item-url="item | itemURL(urlWithVariationId)"
+                    :has-price="item | hasItemDefaultPrice"
+                    :item-type="item.item.itemType">
+            </add-to-basket>
 
-{% if enableCarousel is not defined %}
-    {% if config("Ceres.item.enable_image_carousel") == "true" %}
-        {% set enableCarousel = "true" %}
-    {% else %}
-        {% set enableCarousel = "false" %}
-    {% endif %}
-{% endif %}
-
-<script type="x/template" id="vue-category-item">
-    <article class="cmp cmp-product-thumb cmp-product-thumb--grid">
-        <div class="thumb-inner" :class="paddingClasses" :style="paddingInlineStyles">
-
-            {{ AddToBasket.printVueComponent( "item", true, false, { ":has-price": "item | hasItemDefaultPrice" } ) }}
-
-            <div class="thumb-background"></div>
-
-            <div class="thumb-image">
-                <div class="square-container">
-                    <div class="square-inner main-image">
-                        <slot name="item-image">
-                            <category-image-carousel template="#vue-category-image-carousel"
-                                                    :image-urls-data="item.images | itemImages(imageUrlAccessor)"
-                                                    :alt-text="item | itemName"
-                                                    :title-text="item | itemName"
-                                                    :item-url="item | itemURL"
-                                                    :enable-carousel="{{ enableCarousel }}"
-                                                    :disable-carousel-on-mobile="disableCarouselOnMobile"
-                                                    ref="categoryImageCarousel">
-                            </category-image-carousel>
-                        </slot>
-                    </div>
+            <div class="thumb-image aaaabbb">
+                <div class="prop-1-1">
+                    <slot name="item-image">
+                        <category-image-carousel :image-urls-data="item.images | itemImages(imageUrlAccessor)"
+                                                :alt-text="item | itemName"
+                                                :title-text="item | itemName"
+                                                :item-url="item | itemURL(urlWithVariationId)"
+                                                :enable-carousel="$ceres.config.item.enableImageCarousel"
+                                                :disable-carousel-on-mobile="disableCarouselOnMobile"
+                                                ref="categoryImageCarousel">
+                        </category-image-carousel>
+                    </slot>
                 </div>
             </div>
 
             <!-- STORE SPECIALS -->
-             <div class="special-tags">
-				<span v-if="storeSpecial">
-  					<span class="badge badge-offer badge-danger" v-if="item.item.storeSpecial.id == 1 && item.prices.rrp.data.basePricee != 0 ">-${    (100 - ( item.prices.default.price.value) / (item.prices.rrp.data.basePrice) * 100).toFixed(0) } %</span>
-  					<span class="badge badge-new badge-primary" v-if="item.item.storeSpecial.id == 2">${ item.item.storeSpecial.names.name }</span>
-				</span>
-	        </div>
+            <slot name="store-special">
+                <item-store-special v-if="storeSpecial || item.variation.bundleType === 'bundle'"
+                                    :store-special="storeSpecial"
+                                    :recommended-retail-price="item.prices.rrp"
+                                    :variation-retail-price="item.prices.default"
+                                    :special-offer-price="item.prices.specialOffer"
+                                    :decimal-count="decimalCount"
+                                    :bundle-type="item.variation.bundleType"></item-store-special>
+            </slot>
             <!-- ./STORE SPECIALS -->
 
             <!-- ITEM DETAILS -->
             <slot name="item-details">
                 <div class="thumb-content">
-                    <a :href="item | itemURL" class="thumb-title small">
+                    <a :href="item | itemURL(urlWithVariationId)" class="thumb-title small stretched-link">
                         ${ item | itemName }<!--
-                        --><span v-for="attribute in item.groupedAttributes">${ "Ceres::Template.itemGroupedAttribute" | translate(attribute) }</span>
+                    --><span v-for="attribute in item.groupedAttributes">${ "Ceres::Template.itemGroupedAttribute" | translate(attribute) }</span>
                     </a>
-                    <div class="thumb-meta">
+                    <div class="thumb-meta mt-2">
                         <slot name="before-prices"></slot>
 
                         <div class="prices">
-                            <div v-if="item.prices.rrp && item.prices.rrp.data.basePrice > 0 && item.prices.rrp.data.basePrice > item.prices.default.unitPrice.value" class="price-view-port">
+                            <div v-if="item.prices.rrp && item.prices.rrp.price.value > 0 && item.prices.rrp.price.value > item.prices.default.unitPrice.value" class="price-view-port">
                                 <del class="crossprice" v-if="item.prices.specialOffer">
                                     ${ item.prices.default.unitPrice.formatted | itemCrossPrice(true) }
                                 </del>
                                 <del class="crossprice" v-else>
-                                    <span v-if="item.texts.lang === 'en'">RRP ${ item.prices.rrp.data.basePrice | currency(item.prices.rrp.currency ) }</span>
-                                    <span v-if="item.texts.lang === 'de'">UVP ${ item.prices.rrp.data.basePrice | currency(item.prices.rrp.currency ) }</span>
+                                    ${ item.prices.rrp.unitPrice.formatted | itemCrossPrice }
                                 </del>
                             </div>
 
                             <div class="price">
-                                ${ item.prices.default.unitPrice.value | currency(item.prices.default.currency) }*
+                                nur ${ item.prices.default.unitPrice.formatted | specialOffer(item.prices, "unitPrice", "formatted") } *
                             </div>
                         </div>
                     </div>
 
                     <slot name="after-prices"></slot>
 
-                    <div class="category-unit-price" v-if="!(item.unit.unitOfMeasurement === 'C62' && item.unit.content === 1)">
+                    <div class="category-unit-price small" v-if="!(item.unit.unitOfMeasurement === 'C62' && item.unit.content === 1)">
                         <span>${ item.unit.content }</span>
                         <span>&nbsp;${ item.unit.names.name }</span>
                         <span v-if="item.variation.mayShowUnitPrice">&nbsp;| ${ item.prices.default.basePrice }</span>
                     </div>
 
-                    {{ AddToBasket.printVueComponent( "item", false, false, { ":has-price": "item | hasItemDefaultPrice" } ) }}
+                    <add-to-basket
+                            :variation-id="item.variation.id"
+                            :is-salable="!!item.filter && item.filter.isSalable"
+                            :has-children="!!item.item && item.item.salableVariationCount > 1"
+                            :interval-quantity="item.variation.intervalOrderQuantity || 1"
+                            :minimum-quantity="item.variation.minimumOrderQuantity"
+                            :maximum-quantity="!!item.variation.maximumOrderQuantity && item.variation.maximumOrderQuantity > 0 ? item.variation.maximumOrderQuantity : null"
+                            :order-properties="item.properties.filter(function(prop) { return prop.property.isOderProperty })"
+                            :has-order-properties="item.hasOrderProperties"
+                            :use-large-scale="false"
+                            :show-quantity="false"
+                            :item-url="item | itemURL(urlWithVariationId)"
+                            :has-price="item | hasItemDefaultPrice"
+                            :item-type="item.item.itemType">
+                    </add-to-basket>
 
                     <span class="vat small text-muted">
-                        <span v-if="item.texts.lang === 'en'">Available: ${ item.stock.net }</span>
-                        <span v-if="item.texts.lang === 'de'">Verfügbar: ${ item.stock.net }</span>
-                    </span>
-
-
+                    * <span v-if="showNetPrices">${ $translate("Ceres::Template.itemExclVAT") }</span>
+                    <span v-else>${ $translate("Ceres::Template.itemInclVAT") }</span>
+                    ${ $translate("Ceres::Template.itemExclusive") }
+                    <a v-if="$ceres.config.global.hasShippingCostsCategoryId > 0" data-toggle="modal" href="#shippingscosts" class="text-appearance" :title="$translate('Ceres::Template.itemShippingCosts')">${ $translate("Ceres::Template.itemShippingCosts") }</a>
+                    <a v-else :title="$translate('Ceres::Template.itemShippingCosts')">${ $translate("Ceres::Template.itemShippingCosts") }</a>
+                </span>
                 </div>
             </slot>
             <!-- ./ITEM DETAILS  -->
