--- a/resources/views/ItemList/Components/CategoryItem.twig
+++ b/resources/views/ItemList/Components/CategoryItem.twig
@@ -56,17 +56,18 @@
                         <slot name="before-prices"></slot>
 
                         <div class="prices">
-                            <div v-if="item.prices.rrp && item.prices.rrp.price.value > 0 && item.prices.rrp.price.value > item.prices.default.unitPrice.value" class="price-view-port">
+                            <div v-if="item.prices.rrp && item.prices.rrp.data.basePrice > 0 && item.prices.rrp.data.basePrice > item.prices.default.unitPrice.value" class="price-view-port">
                                 <del class="crossprice" v-if="item.prices.specialOffer">
                                     ${ item.prices.default.unitPrice.formatted | itemCrossPrice(true) }
                                 </del>
                                 <del class="crossprice" v-else>
-                                    ${ item.prices.rrp.unitPrice.formatted | itemCrossPrice }
+                                    <span v-if="item.texts.lang === 'en'">RRP ${ item.prices.rrp.data.basePrice | currency(item.prices.rrp.currency ) }</span>
+                                    <span v-if="item.texts.lang === 'de'">UVP ${ item.prices.rrp.data.basePrice | currency(item.prices.rrp.currency ) }</span>
                                 </del>
                             </div>
 
                             <div class="price">
-                                nur ${ item.prices.default.unitPrice.formatted | specialOffer(item.prices, "unitPrice", "formatted") } *
+                                ${ item.prices.default.unitPrice.formatted | specialOffer(item.prices, "unitPrice", "formatted") }*
                             </div>
                         </div>
                     </div>
@@ -96,12 +97,9 @@
                     </add-to-basket>
 
                     <span class="vat small text-muted">
-                    * <span v-if="showNetPrices">${ $translate("Ceres::Template.itemExclVAT") }</span>
-                    <span v-else>${ $translate("Ceres::Template.itemInclVAT") }</span>
-                    ${ $translate("Ceres::Template.itemExclusive") }
-                    <a v-if="$ceres.config.global.hasShippingCostsCategoryId > 0" data-toggle="modal" href="#shippingscosts" class="text-appearance" :title="$translate('Ceres::Template.itemShippingCosts')">${ $translate("Ceres::Template.itemShippingCosts") }</a>
-                    <a v-else :title="$translate('Ceres::Template.itemShippingCosts')">${ $translate("Ceres::Template.itemShippingCosts") }</a>
-                </span>
+                        <span v-if="item.texts.lang === 'en'">Available: ${ item.stock.net }</span>
+                        <span v-if="item.texts.lang === 'de'">Verfügbar: ${ item.stock.net }</span>
+                    </span>
                 </div>
             </slot>
             <!-- ./ITEM DETAILS  -->
